Fix displaying of out-of-screen parts on mobile devices

--- a/src/structure.css
+++ b/src/structure.css
@@ -7,13 +7,15 @@
 
 html,
 body,
+#wrapper,
 #map {
 	height: 100%;
 	width: 100%;
 }
 
-body {
+#wrapper {
 	overflow: hidden;
+	position: relative;
 }
 
 #map {
